--- a/GUI_Flask/requirements.txt
+++ b/GUI_Flask/requirements.txt
@@ -1,1 +1,20 @@
-flask
+Flask==1.1.2
+cffi==1.14.2
+click==7.1.2
+cmake==3.18.0
+cryptography==3.0
+dlib==19.21.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+numpy==1.19.1
+Pillow==7.2.0
+pip==20.2.2
+pycparser==2.20
+setuptools==49.6.0
+six==1.15.0
+unireedsolomon==1.0.2
+Werkzeug==1.0.1
+wheel==0.35.1
