--- a/GUI_Flask/requirements.txt
+++ b/GUI_Flask/requirements.txt
@@ -1,4 +1,3 @@
-Flask==1.1.2
 cffi==1.14.2
 click==7.1.2
 cmake==3.18.0
@@ -6,6 +5,9 @@ cryptography==3.0
 dlib==19.21.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
+Flask==1.1.2
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
@@ -18,3 +20,4 @@ six==1.15.0
 unireedsolomon==1.0.2
 Werkzeug==1.0.1
 wheel==0.35.1
+WTForms==2.3.3
